2002-02-13  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/taglist.xml: added HTML tags

2002-02-12  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am (SUBDIRS): added ASCII

	* ASCII/ascii.c:
	* ASCCI/Makefile.am: ported
	
	* ASCII/asciitable.glade: removed
	
	* ASCII/asciitable.glade2: new file

	* taglist/gedit-taglist-plugin-window.c (populate_tags_list):
	unref module

	* taglist/gedit-taglist-plugin.c: #define MENU_ITEM_PATH 
	"/menu/Edit/EditOps_5/"

	* time/time.c (create_formats_list): unref module

2002-02-10  Paolo Maggi  <maggi@athena.polito.it>

	* diff/diff.c: save/load settings
	(save_settings): new function

2002-02-09  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/gedit-taglist-plugin.c (update_ui): the
	menu entry for the taglist plugin is always sensitive

2002-02-08  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am (SUBDIRS): added diff

	* diff/Makefile.am: ported

	* diff/diff.c: ported

	* diff/diff.glade: removed

	* diff/diff.glade2: new file

2002-02-08  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/taglist.xml: added Latex tag group

2002-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am (SUBDIRS): added taglist 

	* taglist/gedit-taglist-plugin.c:
	* taglist/gedit-taglist-plugin.h:
	* taglist/gedit-taglist-plugin-parser.c:
	* taglist/gedit-taglist-plugin-parser.h:
	* taglist/gedit-taglist-plugin-window.c:
	* taglist/gedit-taglist-plugin-window.h:
	* taglist/Makefile.am:
	* taglist/taglist.xml: new files

2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* cvschangelog/cvschangelog.c (update_ui): fix mem leak

	* time/time.c (time_world_cb): fix mem leak

2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* cvschangelog/Makefile.am:
	* docinfo/Makefile.am: 
	* sample/Makefile.am: 
	* shell_output/Makefile.am:
	* time/Makefile.am: define G*_DEPRECATED in INCLUDES

	* cvschangelog/cvschangelog.c:
	* docinfo/docinfo.c: 
	* sample/sample.c: 
	* shell_output/shell_output.c: