@@ -1,3 +1,14 @@
+2002-02-13  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* ascii/ascii.c: #include <config.h> for proper i18n.
+	* cvschangelog/cvschangelog.c: Same.
+	* diff/diff.c: Same.
+	* docinfo/docinfo.c: Same
+	* sample/sample.c: Here too.
+	* shell_output/shell_output.c: Same.
+	* spell/spell.c: Same.
+	* time/time.c: Here too.
+								
 2002-02-13  Paolo Maggi  <maggi@athena.polito.it>
 
 	* taglist/taglist.xml: added HTML tags
